2005-12-17  Jean-Louis Martineau <martineau@zmanda.com>

	* restore-src/restore.c (get_block): Return a ssize_t.
	* restore-src/restore.c: convert ssize_t to long for printing.
	* restore-src/restore.c (restore>): Remove unused variable, outpipe,
	   outpipe2, i.

2005-12-17  John R. Franks <jrfranks@zmanda.com>

	* restore-src/restore.h (read_file_header, restore): Return a ssize_t
	  instead of using a global variable bytes_read.
	* restore-src/restore.c: Use local variable instead of global
	  bytes_read. Many memory management fixe. Fixe pipe handling,
	* restore-src/amrestore.c: Use new read_file_header and restore.
	* restore-src/amfetchdump.c: Use new read_file_header and restore.

2005-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	With Kevin Till <ktill@zmanda.com>

	* common-src/fileheader.c (parse_file_header): Fix parsing of first
	  line.
	* common-src/fileheader.c (build_header): Print crypt after programi
	   and only if it is needed.

2005-12-13  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/reporter.c (handle_success): On a taper line, the outsize
	  should only count dump to tape, not flush.

2005-12-13  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/amstatus.pl.in: Parse chunker DONE line to set output size.

2005-12-08  Jean-Louis Martineau <martineau@zmanda.com>

	* configure.in: Move the size detectection after detection of large
	  file support. That change the size of off_t.

2005-12-08  Jean-Louis Martineau <martineau@zmanda.com>

	* common-src/amanda.h: Set OFF_T_FMT to printf format of a off_t.
	* server-src/taper.c: Use OFF_T_FMT.

2005-12-08  Jean-Louis Martineau <martineau@zmanda.com>

	* configure.in: Set LL_FMT correctly.
	* server-src/conffile.c: Use LL_FMT.

2005-12-08  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/conffile.c: Maxdumpsize is a AM64.
	* server-src/planner.c: conf_maxdumpsize, total_size, tape_length and
	  tape_mark are am64_t.
